# ssd-dbms

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bench.sh  example_inserts.py  generate_test.sh
include/: align.h  cli_commands.h  data_structures.h  dbms.h  index.h  main.h  pretty.h  query.h  ssdio.h
include/executor/: executor.h  filter.h  nested_loop_join.h  project.h  seq_scan.h
src/: align.c  cli_commands.c  data_structures.c  dbms.c  index.c  main.c  pretty.c  query.c  ssdio.c
src/executor/: executor.c  filter.c  nested_loop_join.c  project.c  seq_scan.c
tests/: test_advanced_operators.c  test_data_structures.c  test_dbms.c  test_example.c  test_executor.c
